build(image): use Caffeine 2.9.3 + isBlank→trim().isEmpty() for JDK 8
- Caffeine 3.x requires JDK 11+, fall back to 2.9.3 for JDK 8 line
- Replace String.isBlank() (JDK 11+) with trim().isEmpty() for JDK 8